# SoundSense

./: .env.example  .gitignore  CI_CD_TROUBLESHOOTING.md  COMPLIANCE.md  QUICKSTART_COMPLIANCE.md  README.md  README_ML.md  TROUBLESHOOTING_AI_ANALYSIS.md  docker-compose.yml  dummy_data.csv  serial_reader.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
arduino/sound_sensor/: sound_sensor.ino
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260119000001_init_schema.sql  20260126000001_add_encryption_and_audit.sql
backend/src/: audit.rs  auth.rs  db.rs  errors.rs  fhir.rs  lib.rs  ml_client.rs  routes.rs  serial_ingest.rs  telemetry.rs  ws.rs
backend/src/domain/: models.rs  store.rs
backend/tests/: http.rs
frontend/: README.txt  index.html  index.html.backup
ml-service/: .env.example  Dockerfile  api.py  database.py  model.py  requirements.txt
